--- a/trackr-app/app/src/main/res/values/strings.xml
+++ b/trackr-app/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">trackr-app</string>
+    <string name="app_name">trackr</string>
+    <string name="todays_events">Today\'s Events:</string>
+    <string name="upcoming_events">Upcoming Events:</string>
+    <string name="no_events">No Events :(</string>
 </resources>
