--- a/trackr-app/app/src/main/res/values/strings.xml
+++ b/trackr-app/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="todays_events">Today\'s Events:</string>
     <string name="upcoming_events">Upcoming Events:</string>
     <string name="no_events">No Events :(</string>
+    <string name="no_people">No People Yet :(</string>
 </resources>
